--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 .body_section {
-  width: 1400px;
+  width: 1250px;
   margin: auto;
+  background-color: #f5f5f5;
 }
 
 .hero {
@@ -24,19 +25,18 @@
   margin-bottom: 0;
 }
 .hero_title {
-    font-size: 56px;
-    font-weight: 900;
-    color: #0e0e0e;
-    margin: 30px 0;
-
+  font-size: 56px;
+  font-weight: 900;
+  color: #0e0e0e;
+  margin: 30px 0;
 }
 .hero_button {
-    background-color: #006A50;
-    color: white;
-    border-radius: 8px;
-    width: fit-content;
-    padding:20px 40px;
-    border: none;
+  background-color: #006a50;
+  color: white;
+  border-radius: 8px;
+  width: fit-content;
+  padding: 20px 40px;
+  border: none;
 }
 
 .hero_right {
@@ -47,64 +47,161 @@
 .banner_img {
   width: 60%;
 }
-.number{
- display: flex;
-    justify-content: space-between;
-    padding: 32px;
-    margin-right: 32px;
-border: 24px;
+
+.number {
+  display: flex;
+  justify-content: space-between;
+  padding: 32px;
+  margin-right: 32px;
+  border: 24px;
+}
+
+.number_1 {
+  display: flex;
+  display: inline;
+  background-color: #548ff562;
+  margin-right: 32px;
+  border: 24px;
+  padding: 32px;
+  border-radius: 18px;
+}
+.number_2 {
+  display: flex;
+  display: inline;
+  background-color: #c6e4d6;
+  margin-right: 32px;
+  border: 24px;
+  padding: 32px;
+  border-radius: 18px;
+}
+.number_3 {
+  display: flex;
+  display: inline;
+  background-color: #f7ebcf;
+  margin-right: 32px;
+  border: 24px;
+  padding: 32px;
+  border-radius: 18px;
+}
+.no {
+  display: inline;
+}
+.sobuj {
+  background-color: #09a15c;
+  color: white;
+  border: none;
+  padding: 20px 11px;
+  border-radius: 8px;
+}
+.holud {
+  background-color: #ffc239;
+  color: white;
+  border: none;
+  padding: 20px 11px;
+  border-radius: 8px;
+}
+.nil {
+  background-color: #5490f5;
+  color: white;
+  border: none;
+  padding: 20px 11px;
+  border-radius: 8px;
+}
+.news {
+  display: flex;
+  gap: 20px;
+  background-color: white;
+  padding: 20px 40px;
+  border-radius: 15px;
+  margin-bottom: 20px;
+}
+.news_img1 {
+  border-radius: 20px;
+  height: 80%;
+}
+
+.image_container {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  width: 30%;
+}
+
+.news1_details_container {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.news_details_title {
+  font-size: 32px;
+  margin: 10px 0;
+}
+.news_details_img {
+  width: 15%;
+}
+.news_btn {
+  padding: 10px 30px;
+  width: fit-content;
+  border-radius: 8px;
+  background-color: #006a50;
+  font-weight: 500;
+  color: white;
+}
+
+.donate_section{
+  padding: 0 80px;
+}
+
+.donate_title {
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 0px;
+  margin-top: 60px;
+}
+.donate_description {
+  color: #0e0e0e9c;
+  text-align: center;
+}
+.donate_container {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 40px;
+}
+.donate {
+  font-size: 40px;
+  background-color: #fff;
+  border-radius: 16px;
+  text-align: center;
+  padding: 40px;
 
 }
-.number_1{
-display: flex;
-display: inline;
-background-color: #548ff562 ;
-margin-right: 32px;
-border: 24px;
-padding: 32px;
-border-radius: 18px
+.custom_donate {
+  background-color: #C6E4D6;
 }
-.number_2{
- display: flex;
- display: inline;
- background-color: #C6E4D6;
- margin-right: 32px;
-border: 24px;
-padding: 32px;
-border-radius: 18px;
+
+.amount {
+  background: white;
+  padding: 15px;
+  text-align: center;
+  color: #0e0e0e57;
+  border-radius: 6px;
+  margin: 0 10px;
+  margin-top: 20px;
 }
-.number_3{
-   display: flex;
-   display: inline;
-   background-color: #F7EBCF;
-   margin-right: 32px;
-border: 24px;
-padding: 32px;
-border-radius: 18px
+.btn_container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-.no{
-    display: inline;
+.btn {
+  padding: 10px 30px;
+  width: fit-content;
+  border-radius: 8px;
+  background-color: #006a50;
+  font-weight: 500;
+  color: white;
+  margin-top: 20px;
 }
-.sobuj{
-    background-color: #09A15C;
-    color: white;
-    border: none;
-    padding: 20PX 11PX;
-    border-radius:8px ;
-}
-.holud{
-    background-color: #FFC239 ;
-    color: white;
-    border: none;
-    padding: 20PX 11PX;
-    border-radius:8px ;
-   
-}
-.nil{
-    background-color: #5490F5 ;
-    color: white;
-    border: none;
-    padding: 20PX 11PX;
-    border-radius:8px ;
-}
-.pra
